fix: adaptive design for landing page on small screens

--- a/src/pages/landingPage/landingPage.scss
+++ b/src/pages/landingPage/landingPage.scss
@@ -14,6 +14,10 @@
     @include medium {
       padding: 40px 20px;
     }
+
+    @include small {
+      padding: 30px 15px;
+    }
   }
 
   &__form {
@@ -25,6 +29,10 @@
 
     @include medium {
       margin: auto;
+    }
+
+    @include small {
+      padding: 30px 10px 20px;
     }
   }
 
